# grepx-celery-server

./: README.md  __init__.py  pyproject.toml  requirments.txt  run.sh  setup.sh  setup_tasks.py  task_client.py  tasks.db
config/: config.yaml
libs/grepx-task-managment-libs/: README.md  pyproject.toml  requirements.txt  setup.py
libs/grepx-task-managment-libs/examples/: basic_usage.py  database_example.py
libs/grepx-task-managment-libs/src/task_management/: __init__.py
libs/grepx-task-managment-libs/src/task_management/core/: __init__.py  manager.py  task_definition.py  task_registry.py
libs/grepx-task-managment-libs/src/task_management/sources/: __init__.py  base.py  config.py  database.py
libs/grepx-task-managment-libs/src/task_management/storage/: __init__.py  sqlite.py
libs/grepx-task-managment-libs/tests/: __init__.py  test_manager.py  test_registry.py  test_sources.py
src/: __init__.py  app.py  config_loader.py  main.py
src/adapters/: __init__.py  celery_task_adapter.py
src/config/: __init__.py  schemas.py
src/task_management/: __init__.py  manager.py  registry.py
src/task_management/sources/: __init__.py  config_source.py  database_source.py
src/task_management/storage/: __init__.py  sqlite_storage.py
src/tasks/: example_tasks.py
