[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-management"
version = "0.1.0"
description = "Framework-agnostic task management library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["task", "management", "orchestration", "celery", "dagster"]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
database = ["sqlalchemy>=2.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]
yaml = ["pyyaml>=6.0.0"]
all = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pyyaml>=6.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["task_management*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
